# ev-chargepoint-bot

./: Cargo.toml  Makefile  README.md
deployment/: template.yml
src/: error.rs  lib.rs
src/dtos/: mod.rs
src/dtos/plugshare/: detail_response.rs  mod.rs  nearby_response.rs
src/dtos/telegrams/: callback_query.rs  chat.rs  location.rs  message.rs  message_entity.rs  mod.rs  sendmessage_params.rs  telegram_request.rs  user.rs
src/services/: bot.rs  mod.rs  plugshare_api.rs  telegram_api.rs  telegram_helper.rs
