[package]
name = "ev_chargepoint_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bot"
path = "src/bin/bot.rs"

[dependencies]
async-trait = "0.1.52"
aws-config = "0.10.1"
aws-sdk-dynamodb = "0.10.1"
futures = "0.3.17"
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
simple-error = "0.2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
